--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  pdf: ^3.11.3
-  printing: ^5.14.2
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
